Upgrade to ImageEditor 2.2.0 with PrimeFaces 8.0

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -17,7 +17,9 @@
 
 		<h:form id="exampleForm">
 
-			<p:growl id="pageGrowl" showDetail="true" autoUpdate="true" />
+			<p:growl id="pageGrowl" showDetail="true">
+				<p:autoUpdate/>
+			</p:growl>
 
 			<ie:imageEditor id="exampleImageEditor" widgetVar="imageEd"
 				value="#{imageEditorBean.image}" initialColor="ffff00"
